Fix focusability and tab order of infobar.

Ensures that despite odd ordering of browserview's children for painting
purposes, tab order is as expected.

Also ensures that focus returns to the omnibox following the user
interacting with the security chip, so that the next item in tab order
is the reload prompt.

Setting focus directly to the infobar would be very tricky and require
additional architectural changes, since the infobar is not visible (and
therefore not focusable) at the moment the prompt is created and
installed.

Bug: 910067
Change-Id: Ia956c60401696608c3307620f58b15a0a428d136
Reviewed-on: https://chromium-review.googlesource.com/c/1362499
Commit-Queue: Dana Fried <dfried@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617290}
Former-commit-id: 99115b5f73e233211078be11a9bff8a756750ce2